atualizei de novo

--- a/README.qmd
+++ b/README.qmd
@@ -15,3 +15,14 @@ lubridate::now()
 ```
 
 (Analise dos dados aqui)
+
+Problemas de uma pessoa ter que atualizar todo dia:
+
+- A pessoa pode estar ausente
+- A pessoa pode esquecer de rodar alguma etapa
+- A pessoa pode errar
+- A pessoa responsavel pode ter saido da area ou da empresa
+
+Solucao proposta: automatizar a rodagem quando 
+- Ou o documento for alterado (sofrer alguma mudanca/melhoria)
+- Ou agendado para rodar todo dia ou todo mes (ou periodicamente)
