--- a/README.qmd
+++ b/README.qmd
@@ -16,6 +16,10 @@ lubridate::now()
 
 (Analise dos dados aqui)
 
+```{r}
+# sc <- spark_connect(method = "databricks_connect")
+```
+
 Problemas de uma pessoa ter que atualizar todo dia:
 
 - A pessoa pode estar ausente
@@ -26,3 +30,7 @@ Problemas de uma pessoa ter que atualizar todo dia:
 Solucao proposta: automatizar a rodagem quando 
 - Ou o documento for alterado (sofrer alguma mudanca/melhoria)
 - Ou agendado para rodar todo dia ou todo mes (ou periodicamente)
+
+Github Actions
+
+Agora este documento tem um secao a mais
